Update booking page layout and enhance form submission handling

--- a/booking.html
+++ b/booking.html
@@ -66,6 +66,9 @@
             </div>
             <aside class="booking-summary">
                 <h3>Booking Summary</h3>
+
+                <div class="summary-location" id="summary-location">
+                    </div>
                 <div id="summary-content">
                     <p>Please select a car and dates to see the summary.</p>
                 </div>
