Add Compact SUV option to car type filter and include Tata Nexon in car listings

--- a/fleet.html
+++ b/fleet.html
@@ -38,6 +38,7 @@
                     <label><input type="checkbox" name="type" value="Sedan"> Sedan</label>
                     <label><input type="checkbox" name="type" value="Luxury"> Luxury</label>
                     <label><input type="checkbox" name="type" value="Van"> Van</label>
+                    <label><input type="checkbox" name="type" value="Compact SUV"> Compact SUV</label>
                 </div>
                 <div class="filter-group">
                     <h4>Transmission</h4>
