Add: Include logout button in the admin dashboard navigation

--- a/admin.html
+++ b/admin.html
@@ -14,6 +14,7 @@
         <nav class="navbar">
             <a href="index.html" class="nav-logo">Momentum Rides</a>
             <div class="nav-admin-title">Admin Dashboard</div>
+            <button id="logout-button" class="nav-cta">Logout</button>
         </nav>
     </header>
 
