Add: Implement footer section across all HTML pages with contact information and quick links

--- a/booking.html
+++ b/booking.html
@@ -76,6 +76,35 @@
             </aside>
         </div>
     </main>
+    <!-- =================== FOOTER START =================== -->
+    <footer class="footer">
+        <div class="container footer-content">
+            <div class="footer-about">
+                <h3>Momentum Rides</h3>
+                <p>Your trusted partner for car rentals in Jaipur, Rajasthan. We provide quality cars and exceptional service.</p>
+            </div>
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="fleet.html">Fleet</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3>Contact Us</h3>
+                <p><i class="fas fa-map-marker-alt"></i> C-Scheme, Jaipur, Rajasthan</p>
+                <p><i class="fas fa-phone"></i> <a href="tel:+919876543210">+91-9876543210</a></p>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:contact@momentumrides.com">contact@momentumrides.com</a></p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <a href="login.html" class="admin-link">&copy; 2025 Momentum Rides. All Rights Reserved.</a>
+        </div>
+    </footer>
+    <!-- =================== FOOTER END =================== -->
     <script src="booking.js"></script>
 </body>
 </html>
