--- a/fleet.html
+++ b/fleet.html
@@ -76,7 +76,7 @@
             </div>
             <div class="footer-contact">
                 <h3>Contact Us</h3>
-                <p><i class="fas fa-map-marker-alt"></i> C-Scheme, Jaipur, Rajasthan</p>
+                <p><i class="fas fa-map-marker-alt"></i> Mall of Jaipur, Vaishali Nagar, Jaipur, Rajasthan</p>
                 <p><i class="fas fa-phone"></i> <a href="tel:+919876543210">+91-9876543210</a></p>
                 <p><i class="fas fa-envelope"></i> <a href="mailto:contact@momentumrides.com">contact@momentumrides.com</a></p>
             </div>
