feat: Implement admin booking status management
- Adds 'Status' and 'Actions' columns to the admin dashboard.
- Implements 'Approve' and 'Decline' buttons for pending bookings.
- Creates a PATCH /api/bookings/:id endpoint to update booking status in the database.

--- a/admin.html
+++ b/admin.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Momentum Rides</title>
-    <!-- Link to the same CSS and Fonts -->
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <header class="header scrolled">
@@ -25,16 +25,15 @@
                 <thead>
                     <tr>
                         <th>Customer Name</th>
-                        <th>Email</th>
                         <th>Car Booked</th>
-                        <th>Start Date</th>
-                        <th>End Date</th>
+                        <th>Dates</th>
                         <th>Total Cost</th>
                         <th>Booking Date</th>
+                        <th>Status</th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody id="bookings-tbody">
-                    <!-- Booking rows will be inserted here by JavaScript -->
                     <tr><td colspan="7" class="loading-row">Loading bookings...</td></tr>
                 </tbody>
             </table>
