refactor: Update admin table header for status dropdown

--- a/admin.html
+++ b/admin.html
@@ -30,7 +30,7 @@
                         <th>Total Cost</th>
                         <th>Booking Date</th>
                         <th>Status</th>
-                        <th>Actions</th>
+                        <th>Update Status</th>
                     </tr>
                 </thead>
                 <tbody id="bookings-tbody">
