refactor(admin): Simplify table to a single status column

--- a/admin.html
+++ b/admin.html
@@ -30,11 +30,11 @@
                         <th>Total Cost</th>
                         <th>Booking Date</th>
                         <th>Status</th>
-                        <th>Update Status</th>
                     </tr>
                 </thead>
                 <tbody id="bookings-tbody">
-                    <tr><td colspan="7" class="loading-row">Loading bookings...</td></tr>
+                    <!-- The loading row colspan is now 6 -->
+                    <tr><td colspan="6" class="loading-row">Loading bookings...</td></tr>
                 </tbody>
             </table>
         </div>
