feat(admin): Display booking location in customer details

--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
             <table class="admin-table">
                 <thead>
                     <tr>
-                        <th>Customer Name</th>
+                        <th>Customer Details</th>
                         <th>Car Booked</th>
                         <th>Dates</th>
                         <th>Total Cost</th>
