--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,10 @@
         <nav class="navbar">
             <a href="index.html" class="nav-logo">Momentum Rides</a>
             <div class="nav-admin-title">Admin Dashboard</div>
+            <div>
+                <a href="fleet-management.html" class="nav-cta-secondary">Manage Fleet</a>
+                <button id="logout-button" class="nav-cta">Logout</button>
+            </div>
             <button id="logout-button" class="nav-cta">Logout</button>
         </nav>
     </header>
