--- a/fleet-management.html
+++ b/fleet-management.html
@@ -53,7 +53,6 @@
             <form id="car-form">
                 <input type="hidden" id="car-db-id" name="_id">
                 
-                <!-- === UPDATED FORM LAYOUT === -->
                 <div class="form-row">
                     <div class="form-group">
                         <label for="car-id">ID</label>
@@ -65,10 +64,18 @@
                     </div>
                 </div>
                 <div class="form-row">
+                    <!-- === THIS IS THE UPDATED PART === -->
                     <div class="form-group">
-                        <label for="car-type">Type</label>
-                        <input type="text" id="car-type" required>
+                        <label for="car-type-select">Type</label>
+                        <select id="car-type-select" required>
+                            <!-- Options will be populated by JavaScript -->
+                        </select>
                     </div>
+                    <div class="form-group" id="new-car-type-group" style="display: none;">
+                        <label for="car-type-new">New Car Type</label>
+                        <input type="text" id="car-type-new">
+                    </div>
+                    <!-- === END OF UPDATED PART === -->
                     <div class="form-group">
                         <label for="car-price">Price per Day (₹)</label>
                         <input type="number" id="car-price" required>
