--- a/fleet.html
+++ b/fleet.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <header class="header scrolled">
@@ -27,18 +28,19 @@
             </div>
         </nav>
     </header>
+
     <main class="page-container">
         <h1 class="page-title">Explore Our Fleet</h1>
         <div class="fleet-layout">
+            <!-- Filtering Sidebar -->
             <aside class="filters">
                 <h3>Filter Options</h3>
                 <div class="filter-group">
                     <h4>Car Type</h4>
-                    <label><input type="checkbox" name="type" value="SUV"> SUV</label>
-                    <label><input type="checkbox" name="type" value="Sedan"> Sedan</label>
-                    <label><input type="checkbox" name="type" value="Luxury"> Luxury</label>
-                    <label><input type="checkbox" name="type" value="Van"> Van</label>
-                    <label><input type="checkbox" name="type" value="Compact SUV"> Compact SUV</label>
+                    <!-- This div will be filled dynamically by JavaScript -->
+                    <div id="car-type-filters">
+                        <p class="filter-loading">Loading types...</p>
+                    </div>
                 </div>
                 <div class="filter-group">
                     <h4>Transmission</h4>
@@ -51,13 +53,16 @@
                     <input type="range" id="price-range" min="1500" max="5000" step="100" value="5000">
                 </div>
             </aside>
+
+            <!-- Car Listings -->
             <section class="fleet-grid-container">
                 <div id="loader" class="loader"></div>
                 <div id="fleet-grid" class="fleet-grid"></div>
             </section>
         </div>
     </main>
-    <!-- =================== FOOTER START =================== -->
+
+    <!-- Footer -->
     <footer class="footer">
         <div class="container footer-content">
             <div class="footer-about">
@@ -85,7 +90,7 @@
             <a href="login.html" class="admin-link">&copy; 2025 Momentum Rides. All Rights Reserved.</a>
         </div>
     </footer>
-    <!-- =================== FOOTER END =================== -->
+
     <script src="fleet.js"></script>
 </body>
 </html>
