--- a/fleet.html
+++ b/fleet.html
@@ -34,6 +34,17 @@
         <div class="fleet-layout">
             <!-- Filtering Sidebar -->
             <aside class="filters">
+                <!-- === SORTING DROPDOWN MOVED HERE === -->
+                <div class="sort-container">
+                    <label for="sort-by">Sort by</label>
+                    <select id="sort-by">
+                        <option value="default">Default</option>
+                        <option value="price-asc">Price: Low to High</option>
+                        <option value="price-desc">Price: High to Low</option>
+                    </select>
+                </div>
+                <!-- === END OF MOVED PART === -->
+
                 <h3>Filter Options</h3>
                 <div class="filter-group">
                     <h4>Car Type</h4>
@@ -55,17 +66,6 @@
 
             <!-- Car Listings -->
             <section class="fleet-grid-container">
-                <!-- === NEW SORTING DROPDOWN === -->
-                <div class="sort-container">
-                    <label for="sort-by">Sort by:</label>
-                    <select id="sort-by">
-                        <option value="default">Default</option>
-                        <option value="price-asc">Price: Low to High</option>
-                        <option value="price-desc">Price: High to Low</option>
-                    </select>
-                </div>
-                <!-- === END OF NEW PART === -->
-
                 <div id="loader" class="loader"></div>
                 <div id="fleet-grid" class="fleet-grid"></div>
             </section>
