feat(home): Make location optional in homepage search

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                     <form id="booking-form">
                         <div class="input-group">
                             <label for="pickup-location"><i class="fas fa-map-marker-alt"></i> Pick-up Location</label>
-                            <input type="text" id="pickup-location" placeholder="e.g., Jaipur International Airport" required>
+                            <!-- === THIS IS THE UPDATED PART === -->
+                            <input type="text" id="pickup-location" placeholder="City, Airport, Address (Optional)">
                         </div>
                         <div class="input-group">
                             <label for="pickup-date"><i class="fas fa-calendar-alt"></i> Pick-up Date</label>
@@ -74,8 +75,7 @@
                 </div>
             </div>
         </section>
-        </main>
-    <!-- =================== FOOTER START =================== -->
+    </main>
     <footer class="footer">
         <div class="container footer-content">
             <div class="footer-about">
@@ -103,7 +103,6 @@
             <a href="login.html" class="admin-link">&copy; 2025 Momentum Rides. All Rights Reserved.</a>
         </div>
     </footer>
-    <!-- =================== FOOTER END =================== -->
     <script src="script.js"></script>
 </body>
 </html>
