fix(ui): Adjust SVG logo dimensions to prevent clipping

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <header class="header">
         <nav class="navbar">
             <a href="index.html" class="nav-logo" style="display: flex; align-items: center;">
-                <svg width="200" height="40" viewBox="0 0 250 50" xmlns="http://www.w3.org/2000/svg" style="fill: white;">
+                <!-- === THIS IS THE CORRECTED SVG === -->
+                <svg width="240" height="40" viewBox="0 0 300 50" xmlns="http://www.w3.org/2000/svg">
                     <!-- Icon: Steering Wheel -->
                     <g transform="translate(25, 25)">
                         <circle cx="0" cy="0" r="22" stroke="white" stroke-width="3" fill="none"/>
