--- a/about.html
+++ b/about.html
@@ -15,7 +15,22 @@
 <body>
     <header class="header scrolled">
         <nav class="navbar">
-            <a href="index.html" class="nav-logo">Momentum Rides</a>
+            <a href="index.html" class="nav-logo" style="display: flex; align-items: center;">
+                <svg width="240" height="40" viewBox="0 0 240 40" xmlns="http://www.w3.org/2000/svg">
+                    <style>
+                        .logo-text {
+                            font-family: 'Poppins', sans-serif;
+                            font-size: 20px;
+                            font-weight: 600;
+                            fill: white;
+                        }
+                    </style>
+                    <!-- Icon: Abstract M Road -->
+                    <path d="M 10 30 L 15 10 L 25 30 L 35 10 L 40 30" stroke="white" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+                    <!-- Text: Momentum Rides -->
+                    <text x="55" y="28" class="logo-text">Momentum Rides</text>
+                </svg>
+            </a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="fleet.html" class="nav-link">Fleet</a></li>
