feat(ui): Update website logo to Dynamic Swoosh SVG design

--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,12 @@
                             fill: white;
                         }
                     </style>
-                    <!-- Icon: Car and Arrow -->
-                    <g transform="translate(0, 5)">
+                    <!-- Icon: Car and Swoosh -->
+                    <g transform="translate(5, 2)">
+                        <!-- Swoosh -->
+                        <path d="M 10 28 C 20 35, 40 35, 50 28" stroke="#FF7F50" stroke-width="3" fill="none" stroke-linecap="round"/>
                         <!-- Car Body -->
                         <path d="M5,25 L15,12 L40,12 L50,25 L5,25 Z" fill="white"/>
-                        <!-- Arrow Accent -->
-                        <path d="M40,12 L50,25 L40,25 Z" fill="#FF7F50"/>
                         <!-- Wheels -->
                         <circle cx="18" cy="25" r="4" fill="#0D1B2A" stroke="white" stroke-width="1.5"/>
                         <circle cx="37" cy="25" r="4" fill="#0D1B2A" stroke="white" stroke-width="1.5"/>
