--- a/contact.html
+++ b/contact.html
@@ -16,27 +16,20 @@
     <header class="header scrolled">
         <nav class="navbar">
             <a href="index.html" class="nav-logo" style="display: flex; align-items: center;">
-                <svg width="240" height="40" viewBox="0 0 240 40" xmlns="http://www.w3.org/2000/svg">
-                    <style>
-                        .logo-text {
-                            font-family: 'Poppins', sans-serif;
-                            font-size: 20px;
-                            font-weight: 600;
-                            fill: white;
-                        }
-                    </style>
-                    <!-- Icon: Car and Swoosh -->
-                    <g transform="translate(5, 2)">
-                        <!-- Swoosh -->
-                        <path d="M 10 28 C 20 35, 40 35, 50 28" stroke="#FF7F50" stroke-width="3" fill="none" stroke-linecap="round"/>
-                        <!-- Car Body -->
-                        <path d="M5,25 L15,12 L40,12 L50,25 L5,25 Z" fill="white"/>
-                        <!-- Wheels -->
-                        <circle cx="18" cy="25" r="4" fill="#0D1B2A" stroke="white" stroke-width="1.5"/>
-                        <circle cx="37" cy="25" r="4" fill="#0D1B2A" stroke="white" stroke-width="1.5"/>
+                <!-- === THIS IS THE CORRECTED SVG === -->
+                <svg width="240" height="40" viewBox="0 0 300 50" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Icon: Steering Wheel -->
+                    <g transform="translate(25, 25)">
+                        <circle cx="0" cy="0" r="22" stroke="white" stroke-width="3" fill="none"/>
+                        <line x1="0" y1="-22" x2="0" y2="-8" stroke="white" stroke-width="3" stroke-linecap="round"/>
+                        <line x1="-19.05" y1="11" x2="-6.9" y2="4" stroke="white" stroke-width="3" stroke-linecap="round"/>
+                        <line x1="19.05" y1="11" x2="6.9" y2="4" stroke="white" stroke-width="3" stroke-linecap="round"/>
+                        <circle cx="0" cy="0" r="5" fill="#FF7F50"/>
                     </g>
                     <!-- Text: Momentum Rides -->
-                    <text x="65" y="28" class="logo-text">Momentum Rides</text>
+                    <text x="60" y="35" font-family="Poppins, sans-serif" font-size="24" font-weight="600" fill="white">
+                        Momentum Rides
+                    </text>
                 </svg>
             </a>
             <ul class="nav-menu">
