--- a/login.html
+++ b/login.html
@@ -14,7 +14,23 @@
 
     <div class="login-container">
         <div class="login-header">
-            <h2>Momentum Rides</h2>
+            <!-- === THIS IS THE UPDATED PART === -->
+            <a href="index.html" class="login-logo-link">
+                <svg width="240" height="40" viewBox="0 0 300 50" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Icon: Steering Wheel -->
+                    <g transform="translate(25, 25)">
+                        <circle cx="0" cy="0" r="22" stroke="#0D1B2A" stroke-width="3" fill="none"/>
+                        <line x1="0" y1="-22" x2="0" y2="-8" stroke="#0D1B2A" stroke-width="3" stroke-linecap="round"/>
+                        <line x1="-19.05" y1="11" x2="-6.9" y2="4" stroke="#0D1B2A" stroke-width="3" stroke-linecap="round"/>
+                        <line x1="19.05" y1="11" x2="6.9" y2="4" stroke="#0D1B2A" stroke-width="3" stroke-linecap="round"/>
+                        <circle cx="0" cy="0" r="5" fill="#1E90FF"/>
+                    </g>
+                    <!-- Text: Momentum Rides -->
+                    <text x="60" y="35" font-family="Poppins, sans-serif" font-size="24" font-weight="600" fill="#0D1B2A">
+                        Momentum Rides
+                    </text>
+                </svg>
+            </a>
             <p>Admin Panel Login</p>
         </div>
         <form id="login-form">
