--- a/services.html
+++ b/services.html
@@ -15,7 +15,23 @@
 <body>
     <header class="header scrolled">
         <nav class="navbar">
-            <a href="index.html" class="nav-logo">Momentum Rides</a>
+            <a href="index.html" class="nav-logo" style="display: flex; align-items: center;">
+                <!-- === THIS IS THE CORRECTED SVG === -->
+                <svg width="240" height="40" viewBox="0 0 300 50" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Icon: Steering Wheel -->
+                    <g transform="translate(25, 25)">
+                        <circle cx="0" cy="0" r="22" stroke="white" stroke-width="3" fill="none"/>
+                        <line x1="0" y1="-22" x2="0" y2="-8" stroke="white" stroke-width="3" stroke-linecap="round"/>
+                        <line x1="-19.05" y1="11" x2="-6.9" y2="4" stroke="white" stroke-width="3" stroke-linecap="round"/>
+                        <line x1="19.05" y1="11" x2="6.9" y2="4" stroke="white" stroke-width="3" stroke-linecap="round"/>
+                        <circle cx="0" cy="0" r="5" fill="#FF7F50"/>
+                    </g>
+                    <!-- Text: Momentum Rides -->
+                    <text x="60" y="35" font-family="Poppins, sans-serif" font-size="24" font-weight="600" fill="white">
+                        Momentum Rides
+                    </text>
+                </svg>
+            </a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="fleet.html" class="nav-link">Fleet</a></li>
