feat(booking): Add location display section to booking page

--- a/booking.html
+++ b/booking.html
@@ -50,6 +50,8 @@
                 <div id="car-details-container">
                     <div class="loader"></div>
                 </div>
+                <div class="booking-location-details" id="booking-location-details">
+                </div>
                 <form id="booking-form-final" class="booking-form-final">
                     <h3>Your Details</h3>
                     <div class="form-row">
