--- a/services.html
+++ b/services.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 50 50'><g transform='translate(25, 25)'><circle cx='0' cy='0' r='22' stroke='%230D1B2A' stroke-width='4' fill='none'/><line x1='0' y1='-22' x2='0' y2='-8' stroke='%230D1B2A' stroke-width='4' stroke-linecap='round'/><line x1='-19.05' y1='11' x2='-6.9' y2='4' stroke='%230D1B2A' stroke-width='4' stroke-linecap='round'/><line x1='19.05' y1='11' x2='6.9' y2='4' stroke='%230D1B2A' stroke-width='4' stroke-linecap='round'/><circle cx='0' cy='0' r='5' fill='%231E90FF'/></g></svg>">
 </head>
 <body>
     <header class="header scrolled">
