feat(about): Update team section with founder's details and portfolio link

--- a/about.html
+++ b/about.html
@@ -86,8 +86,11 @@
             <h2 class="section-title">Meet Our Team</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="https://nxveenkm.github.io/Portfolio/photo.jpg" alt="Founder & CEO">
-                    <h4>Naveen Kumar Meena</h4>
+                    <!-- === THIS IS THE UPDATED PART === -->
+                    <a href="https://nxveenkm.github.io/Portfolio/" target="_blank" class="team-member-link">
+                        <img src="https://nxveenkm.github.io/Portfolio/photo.jpg" alt="Founder & CEO">
+                        <h4>Naveen Kumar Meena</h4>
+                    </a>
                     <p>Founder & CEO</p>
                 </div>
             </div>
