--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
     <header class="header">
         <nav class="navbar">
             <a href="index.html" class="nav-logo" style="display: flex; align-items: center;">
-                <!-- === THIS IS THE CORRECTED SVG === -->
                 <svg width="240" height="40" viewBox="0 0 300 50" xmlns="http://www.w3.org/2000/svg">
                     <!-- Icon: Steering Wheel -->
                     <g transform="translate(25, 25)">
                         <circle cx="0" cy="0" r="22" stroke="white" stroke-width="3" fill="none"/>
                         <line x1="0" y1="-22" x2="0" y2="-8" stroke="white" stroke-width="3" stroke-linecap="round"/>
-                        <line x1="-19.05" y1="11" x2="-6.9" y2="4" stroke="white" stroke-width="3" stroke-linecap="round"/>
-                        <line x1="19.05" y1="11" x2="6.9" y2="4" stroke="white" stroke-width="3" stroke-linecap="round"/>
+                        <line x1="-19.05" y1="11" x2="-6.9" y2='4' stroke="white" stroke-width="3" stroke-linecap="round"/>
+                        <line x1="19.05" y1="11" x2="6.9" y2='4' stroke="white" stroke-width="3" stroke-linecap="round"/>
                         <circle cx="0" cy="0" r="5" fill="#FF7F50"/>
                     </g>
                     <!-- Text: Momentum Rides -->
@@ -92,6 +91,50 @@
                 </div>
             </div>
         </section>
+
+        <!-- === NEW BLOG SECTION === -->
+        <section class="blog-section container reveal">
+            <h2 class="section-title">From Our Blog</h2>
+            <div class="blog-grid">
+                <!-- Blog Post Card 1 -->
+                <div class="blog-card">
+                    <a href="article-1.html" class="blog-card-link">
+                        <img src="https://images.unsplash.com/photo-1603292931988-128125a8c2c7?q=80&w=2070" alt="Pushkar Lake at sunset">
+                        <div class="blog-content">
+                            <h3>Top 5 Weekend Road Trips from Jaipur</h3>
+                            <p class="blog-excerpt">Escape the city and discover the magic of Rajasthan. From the holy city of Pushkar to the majestic forts of Alwar...</p>
+                            <span class="blog-read-more">Read More &rarr;</span>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Blog Post Card 2 -->
+                <div class="blog-card">
+                    <a href="#" class="blog-card-link">
+                        <img src="https://images.unsplash.com/photo-1627895513562-598695011a24?q=80&w=2070" alt="A delicious Rajasthani thali">
+                        <div class="blog-content">
+                            <h3>A Food Lover's Guide to Jaipur's Best Highway Dhabas</h3>
+                            <p class="blog-excerpt">The journey is just as important as the destination, especially when there's delicious food involved. We've mapped out the best...</p>
+                            <span class="blog-read-more">Read More &rarr;</span>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Blog Post Card 3 -->
+                <div class="blog-card">
+                    <a href="#" class="blog-card-link">
+                        <img src="https://images.unsplash.com/photo-1609639618933-d7ef55d93339?q=80&w=2070" alt="A decorated car for a wedding">
+                        <div class="blog-content">
+                            <h3>5 Tips for Renting the Perfect Car for a Rajasthan Wedding</h3>
+                            <p class="blog-excerpt">Planning a wedding in the land of kings? Choosing the right transportation is key. From vintage cars for the Baraat to comfortable...</p>
+                            <span class="blog-read-more">Read More &rarr;</span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <!-- === END OF NEW BLOG SECTION === -->
+
     </main>
     <footer class="footer">
         <div class="container footer-content">
