feat(blog): Update link for blog post card to point to the correct article

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                 <!-- Blog Post Card 2 -->
                 <div class="blog-card">
-                    <a href="#" class="blog-card-link">
+                    <a href="article-2.html" class="blog-card-link">
                         <img src="https://i.redd.it/e9yo0utefpo61.jpg" alt="A delicious Rajasthani thali">
                         <div class="blog-content">
                             <h3>A Food Lover's Guide to Jaipur's Best Highway Dhabas</h3>
