feat(blog): Update link for blog post card to point to the correct article on renting cars for Rajasthan weddings

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                 <!-- Blog Post Card 3 -->
                 <div class="blog-card">
-                    <a href="#" class="blog-card-link">
+                    <a href="article-3.html" class="blog-card-link">
                         <img src="https://www.brides.com/thmb/sziGossviHtujKGTekMTOvzJOt0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/17.Weddingcardecoration-interior_BlueNoteWeddings-009cf8b18be34f9798e8f94b5c62ec08.jpg" alt="A decorated car for a wedding">
                         <div class="blog-content">
                             <h3>5 Tips for Renting the Perfect Car for a Rajasthan Wedding</h3>
