--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="fade-in">Your Journey, Your Car, Your Price.</h1>
-                <p class="fade-in">Explore Jaipur and beyond with our reliable and affordable rental cars.</p>
-                <div class="booking-widget fade-in">
+                <p class="fade-in" style="animation-delay: 0.2s;">Explore Jaipur and beyond with our reliable and affordable rental cars.</p>
+                <div class="booking-widget fade-in" style="animation-delay: 0.4s;">
                     <form id="booking-form">
                         <div class="input-group">
                             <label for="pickup-location"><i class="fas fa-map-marker-alt"></i> Pick-up Location</label>
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </section>
-        <section class="how-it-works container reveal">
+        <section class="how-it-works container animate-on-scroll slide-in-up">
             <h2 class="section-title">Rent a Car in 3 Easy Steps</h2>
             <div class="steps-container">
                 <div class="step">
@@ -92,8 +92,7 @@
             </div>
         </section>
 
-        <!-- === NEW BLOG SECTION === -->
-        <section class="blog-section container reveal">
+        <section id="blog-section" class="blog-section container animate-on-scroll slide-in-up">
             <h2 class="section-title">From Our Blog</h2>
             <div class="blog-grid">
                 <!-- Blog Post Card 1 -->
@@ -133,7 +132,6 @@
                 </div>
             </div>
         </section>
-        <!-- === END OF NEW BLOG SECTION === -->
 
     </main>
     <footer class="footer">
