feat(animations): Add scroll animations to various sections and include global.js for enhanced functionality

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             <a href="login.html" class="admin-link">&copy; 2025 Momentum Rides. All Rights Reserved.</a>
         </div>
     </footer>
+    <script src="global.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
