--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <h1 class="page-title">Driving Journeys, Creating Memories</h1>
         <p class="page-subtitle">Welcome to Momentum Rides, your trusted travel partner in the heart of Rajasthan.</p>
 
-        <section class="about-section">
+        <section class="about-section" class="animate-on-scroll slide-in-left">
             <div class="about-content">
                 <h2>Our Story</h2>
                 <p>Founded in the vibrant city of Jaipur, Momentum Rides was born from a passion for travel and a desire to make exploring the incredible landscapes of Rajasthan simple, safe, and unforgettable. Our founder, a Jaipur native and avid traveler, noticed a gap for a car rental service that offered not just vehicles, but genuine local expertise and a commitment to transparent, customer-first service. We started with just three cars and a simple mission: to be the most trusted name in travel for every visitor to our beautiful state.</p>
@@ -61,7 +61,7 @@
             </div>
         </section>
 
-        <section class="values-section">
+        <section class="values-section" class="animate-on-scroll slide-in-up">
             <h2 class="section-title">Why Travel With Us?</h2>
             <div class="features-grid">
                  <div class="feature-item">
@@ -82,7 +82,7 @@
              </div>
         </section>
 
-        <section class="team-section">
+        <section class="team-section" class="animate-on-scroll slide-in-up">
             <h2 class="section-title">Meet Our Team</h2>
             <div class="team-grid">
                 <div class="team-member">
@@ -132,6 +132,6 @@
         </div>
     </footer>
     <!-- =================== FOOTER END =================== -->
-
+    <script src="global.js"></script>
 </body>
 </html>
