--- a/contact.html
+++ b/contact.html
@@ -52,9 +52,9 @@
         <p class="page-subtitle">We're here to help! Whether you have a question about our cars or need a custom quote for a tour, please feel free to reach out.</p>
 
         <div class="contact-layout">
-            <div class="contact-form-container">
+            <div class="contact-form-container" class="animate-on-scroll slide-in-left">
                 <h3>Send Us a Message</h3>
-                <form action="https://formspree.io/f/xjkolzvd" method="POST" class="contact-form">
+                <form action="https://formspree.io/" method="POST" class="contact-form">
                     <div class="form-group">
                         <label for="name">Full Name</label>
                         <input type="text" id="name" name="name" required>
@@ -75,7 +75,7 @@
                 </form>
             </div>
 
-            <div class="contact-details-container">
+            <div class="contact-details-container" class="animate-on-scroll slide-in-up">
                 <h3>Contact Information</h3>
                 <div class="contact-details">
                     <p><i class="fas fa-map-marker-alt"></i> Mall of Jaipur, Vaishali Nagar, Jaipur, Rajasthan 302021</p>
@@ -128,6 +128,6 @@
         </div>
     </footer>
     <!-- =================== FOOTER END =================== -->
-
+    <script src="global.js"></script>
 </body>
 </html>
