--- a/fleet.html
+++ b/fleet.html
@@ -49,7 +49,7 @@
         <h1 class="page-title">Explore Our Fleet</h1>
         <div class="fleet-layout">
             <!-- Filtering Sidebar -->
-            <aside class="filters">
+            <aside class="filters" class="animate-on-scroll slide-in-left">
                 <!-- === UPDATED SIDEBAR STRUCTURE === -->
                 <h3>Sort & Filter</h3>
                 <div class="filter-group">
@@ -81,7 +81,7 @@
             </aside>
 
             <!-- Car Listings -->
-            <section class="fleet-grid-container">
+            <section class="fleet-grid-container" class="animate-on-scroll slide-in-up">
                 <div id="loader" class="loader"></div>
                 <div id="fleet-grid" class="fleet-grid"></div>
             </section>
@@ -118,5 +118,6 @@
     </footer>
 
     <script src="fleet.js"></script>
+    <script src="global.js"></script>
 </body>
 </html>
