--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
         <h1 class="page-title">Our Premium Services</h1>
         <p class="page-subtitle">Beyond car rentals, we offer a complete travel solution for your needs in Jaipur and beyond.</p>
 
-        <div class="services-grid">
+        <div class="services-grid" class="animate-on-scroll slide-in-up">
             <div class="service-card">
                 <img src="https://miro.medium.com/v2/resize:fit:800/1*6qdgAcgKKUxIDHo1DcTlFQ.jpeg" alt="Professional Chauffeur Service">
                 <div class="service-content">
@@ -109,5 +109,6 @@
         </div>
     </footer>
     <!-- =================== FOOTER END =================== -->
+    <script src="global.js"></script>
 </body>
 </html>
