--- a/index.html
+++ b/index.html
@@ -157,8 +157,9 @@
         </div>
     </footer>
 
-    <!-- === NEW SCRIPT TAGS === -->
+    <!-- === UPDATED SCRIPT TAGS === -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="global.js"></script>
     <script src="script.js"></script>
     <script src="3d-hero.js"></script>
