feat(hero): Add hero canvas container for improved 3D rendering structure

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     </header>
     <main>
         <section class="hero">
+            <!-- === THIS IS THE NEW STRUCTURE === -->
+            <div id="hero-canvas-container"></div>
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="fade-in">Your Journey, Your Car, Your Price.</h1>
@@ -157,7 +159,6 @@
         </div>
     </footer>
 
-    <!-- === UPDATED SCRIPT TAGS === -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="global.js"></script>
