--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 50 50'><g transform='translate(25, 25)'><circle cx='0' cy='0' r='22' stroke='%230D1B2A' stroke-width='4' fill='none'/><line x1='0' y1='-22' x2='0' y2='-8' stroke='%230D1B2A' stroke-width='4' stroke-linecap='round'/><line x1='-19.05' y1='11' x2='-6.9' y2='4' stroke='%230D1B2A' stroke-width='4' stroke-linecap='round'/><line x1='19.05' y1='11' x2='6.9' y2='4' stroke='%230D1B2A' stroke-width='4' stroke-linecap='round'/><circle cx='0' cy='0' r='5' fill='%231E90FF'/></g></svg>">
 </head>
 <body>
+    <!-- === NEW DECORATIVE BACKGROUND ELEMENTS === -->
+    <div class="background-blob blob1"></div>
+    <div class="background-blob blob2"></div>
+
     <header class="header">
         <nav class="navbar">
             <a href="index.html" class="nav-logo" style="display: flex; align-items: center;">
@@ -46,7 +50,6 @@
     </header>
     <main>
         <section class="hero">
-            <!-- === THIS IS THE NEW STRUCTURE === -->
             <div id="hero-canvas-container"></div>
             <div class="hero-overlay"></div>
             <div class="hero-content">
