--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- === NEW DECORATIVE BACKGROUND ELEMENTS === -->
     <div class="background-blob blob1"></div>
     <div class="background-blob blob2"></div>
+    <div class="background-blob blob3"></div>
+    <div class="background-blob blob4"></div>
 
     <header class="header">
         <nav class="navbar">
