--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="background-blob blob2"></div>
     <div class="background-blob blob3"></div>
     <div class="background-blob blob4"></div>
+    <div class="background-blob blob5"></div>
+    <div class="background-blob blob6"></div>
+    <div class="background-blob blob7"></div>
 
     <header class="header">
         <nav class="navbar">
