refactor(admin): Move add car button to become a floating action button

--- a/fleet-management.html
+++ b/fleet-management.html
@@ -40,7 +40,7 @@
     <main class="page-container">
         <div class="admin-header">
             <h1 class="page-title">Manage Your Fleet</h1>
-            <button id="add-car-btn" class="btn-primary-full">Add New Car</button>
+            <!-- The button has been moved from here -->
         </div>
         
         <div class="admin-table-container">
@@ -60,6 +60,11 @@
                 </tbody>
             </table>
         </div>
+
+        <!-- === FLOATING ACTION BUTTON MOVED HERE === -->
+        <button id="add-car-btn" class="fab" title="Add New Car">
+            <i class="fas fa-plus"></i>
+        </button>
     </main>
 
     <!-- Modal for Adding/Editing a Car -->
